Add JWT Token Bearer Isolate Login controller Genereal Code cleanup -  add regions

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -27,7 +27,9 @@
       "ClientSecret": "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"
     }
   },
-
+  "JWTSettings": {
+    "SecretKey": "KJHKHKJHK25235655455454HNWNIUUYEQHIJAY&YEWQN5663"
+  },
 
 
   "AllowedHosts": "*"
