--- a/Client/ChatApp.Client.csproj
+++ b/Client/ChatApp.Client.csproj
@@ -16,6 +16,8 @@
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	<PackageReference Include="Radzen.Blazor" Version="3.11.6" />
 	<PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
+
   </ItemGroup>
 
   <ItemGroup>
