--- a/Client/ChatApp.Client.csproj
+++ b/Client/ChatApp.Client.csproj
@@ -12,6 +12,7 @@
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" PrivateAssets="all" />
 	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.11" />
+	<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
 	<PackageReference Include="MudBlazor" Version="5.1.5" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	<PackageReference Include="Radzen.Blazor" Version="3.11.6" />
